# NexusAI

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
agents/: interview_store.py
agents/crisis/: agent.py
agents/llm/: __init__.py  claude_fallback.py  ollama_client.py
agents/orchestrator/: agent.py  context_store.py  router_logic.py
agents/pathway/: agent.py
agents/wellbeing/: agent.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: seed_demo.py
backend/src/: config.py  main.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/counselor/: models.py  router.py  schemas.py  service.py
backend/src/pathway/: models.py  router.py  schemas.py  service.py
backend/src/shared/: exceptions.py  utils.py
backend/src/students/: models.py  router.py  schemas.py  service.py
backend/src/wellbeing/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_service.py  test_risk_scorer.py  test_router_logic.py
docs/: NexusAI-Overview.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mcp-servers/counselor-alerts-server/: Dockerfile  pyproject.toml
mcp-servers/job-market-server/: Dockerfile  pyproject.toml
mcp-servers/resource-rag-server/: Dockerfile  pyproject.toml
ml/anomaly/: detector.py  (+1 more)
rag/: embedder.py  indexer.py  resource_db.py  retriever.py
(+42 files in other folders)
