[project]
name = "nexusai-backend"
version = "0.1.0"
description = "NexusAI — Academic Wellbeing & Career Co-Pilot Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]==0.123.2",
    "uvicorn[standard]==0.35.0",
    # Data validation
    "pydantic==2.11.7",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=3.0.0,<4.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # HTTP client (for MCP servers + Ollama)
    "httpx==0.28.1",
    # ML / AI
    "scikit-learn==1.5.2",
    "numpy==1.26.4",
    "transformers==4.46.3",
    "torch==2.5.1",
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0",
    "openai-whisper==20240930",
    # NLP
    "spacy==3.8.3",
    # Anthropic SDK (Claude fallback)
    "anthropic==0.40.0",
    # Async SQLite (for RAG resource DB)
    "aiosqlite==0.20.0",
    # File handling
    "python-multipart>=0.0.18",
    "pypdf2==3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
